--- a/html/_/index.html
+++ b/html/_/index.html
@@ -524,8 +524,7 @@ crossorigin=""/>
                       </h3>
 
                       <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
-                      <div class="blocktable">
-
+                      <div class="blocktable mt-2">
                         <h3 class="d-inline text-size-14px">
                           <span>
                             <b lang="fr">Dosage limite recommandé <sup class="fas fa-question-circle iconetab" title="L'IFRA recommande dans ses standards un dosage maximum pour chaque produit réglementé et pour chaque catégorie de produit fini. Il faut ainsi voir ces pourcentages comme la plus haute concentration recommandée en ingrédient réglementé dans le produit fini."></sup> :</b>
@@ -533,7 +532,7 @@ crossorigin=""/>
                           </span>  
                         </h3>
                         <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
-                        <div class="table-responsive text-center">
+                        <div class="table-responsive text-center m-0">
                               <table class="table1 main-48th-IFRA-table IFRA-table">
                                 <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                                 <!-- EN-TETE DU TABLEAU-->
