--- a/html/_/index.html
+++ b/html/_/index.html
@@ -525,7 +525,7 @@ crossorigin=""/>
 
                       <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
                       <div class="blocktable mt-2">
-                        <h3 class="d-inline text-size-14px">
+                        <h3 class="m-0 d-inline text-size-14px">
                           <span>
                             <b lang="fr">Dosage limite recommandé <sup class="fas fa-question-circle iconetab" title="L'IFRA recommande dans ses standards un dosage maximum pour chaque produit réglementé et pour chaque catégorie de produit fini. Il faut ainsi voir ces pourcentages comme la plus haute concentration recommandée en ingrédient réglementé dans le produit fini."></sup> :</b>
                             <b lang="en">Quantitative limit on the use <sup class="fas fa-question-circle iconetab" title="IFRA recommends in its standards a maximum dosage for each regulated product and for each category of finished product. These percentages should therefore be seen as the highest recommended concentration of the regulated ingredient in the finished product."></sup> :</b>
