--- a/html/_/index.html
+++ b/html/_/index.html
@@ -550,15 +550,42 @@ crossorigin=""/>
                                     <span lang="fr">Cat.2 <sup class="fas fa-question-circle iconetab" title="Déodorants/Antitranspirants"></sup>
                                     <span lang="en">Cat.2 <sup class="fas fa-question-circle iconetab" title="Deodorants/Antiperspirants"></sup>
                                   </th>
-                                  <th>Cat.3</th>
-                                  <th>Cat.4</th>
-                                  <th>Cat.5</th>
-                                  <th>Cat.6</th>
-                                  <th>Cat.7</th>
-                                  <th>Cat.8</th>
-                                  <th>Cat.9</th>
-                                  <th>Cat.10</th>
-                                  <th>Cat.11</th>
+                                  <th>
+                                    <span lang="fr">Cat.3 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique rincés"></sup>
+                                    <span lang="en">Cat.3 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Shaved Skin"></sup>
+                                  </th>
+                                  <th>
+                                    <span lang="fr">Cat.4 <sup class="fas fa-question-circle iconetab" title="Produits hydroalcoolique non rincés"></sup>
+                                    <span lang="en">Cat.4 <sup class="fas fa-question-circle iconetab" title="Hydroalcoholics for Unshaved Skin"></sup>
+                                  </th>
+                                  <th>
+                                    <span lang="fr">Cat.5 <sup class="fas fa-question-circle iconetab" title="Crèmes pour les mains"></sup>
+                                    <span lang="en">Cat.5 <sup class="fas fa-question-circle iconetab" title="Hand Cream"></sup>
+                                  </th>
+                                  <th>
+                                    <span lang="fr">Cat.6 <sup class="fas fa-question-circle iconetab" title="Bains de bouche"></sup>
+                                    <span lang="en">Cat.6 <sup class="fas fa-question-circle iconetab" title="Mouthwash"></sup>
+                                  </th>
+                                  <th>
+                                    <span lang="fr">Cat.7 <sup class="fas fa-question-circle iconetab" title="Soins intimes"></sup>
+                                    <span lang="en">Cat.7 <sup class="fas fa-question-circle iconetab" title="Intimate Wipes"></sup>
+                                  </th>
+                                  <th>
+                                    <span lang="fr">Cat.8 <sup class="fas fa-question-circle iconetab" title="Produits coiffants"></sup>
+                                    <span lang="en">Cat.8 <sup class="fas fa-question-circle iconetab" title="Hair Styling Aids"></sup>
+                                  </th>
+                                  <th>
+                                    <span lang="fr">Cat.9 <sup class="fas fa-question-circle iconetab" title="Produits pour les cheveux rincés"></sup>
+                                    <span lang="en">Cat.9 <sup class="fas fa-question-circle iconetab" title="Rinse-off Hair Conditioners"></sup>
+                                  </th>
+                                  <th>
+                                    <span lang="fr">Cat.10 <sup class="fas fa-question-circle iconetab" title="Nettoyant pour surface dure"></sup>
+                                    <span lang="en">Cat.10 <sup class="fas fa-question-circle iconetab" title="Hard Surface Cleaners"></sup>
+                                  </th>
+                                  <th>
+                                    <span lang="fr">Cat.11 <sup class="fas fa-question-circle iconetab" title="Bougies"></sup>
+                                    <span lang="en">Cat.11 <sup class="fas fa-question-circle iconetab" title="Candles"></sup>
+                                  </th>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
                                 <tr>
