--- a/html/_/index.html
+++ b/html/_/index.html
@@ -535,7 +535,7 @@ crossorigin=""/>
                         </h3>
                         <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
                         <div class="table-responsive text-center m-0">
-                              <table class="table1 main-48th-IFRA-table IFRA-table">
+                              <table class="table1 main-48th-IFRA-table IFRA-table mb-3">
                                 <caption class="caption m-0">
                                   <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span>
                                   <span lang="en">Maximum usage according to the product category :</span>
