--- a/html/_/index.html
+++ b/html/_/index.html
@@ -603,9 +603,12 @@ crossorigin=""/>
                                 </tr>
                               </table>
                             
-                              <table class="table2 skin-IFRA-table IFRA-table">
+                              <table class="table2 skin-IFRA-table IFRA-table mb-3">
                                 <!-- TITRE DU TABLEAU-->
-                                <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
+                                <caption class="caption mb-0">
+                                  <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span>
+                                  <span lang="en">Maximum usage according to the product category :</span>
+                                </caption> 
                                 <!-- EN-TETE DU TABLEAU-->
                                 <tr>
                                   <th colspan="2"><span lang="fr">En contact avec la peau</span><span lang="en">Skin contact products </span></th>
@@ -622,16 +625,13 @@ crossorigin=""/>
                                   <td><span class="modalbody-non-skin-contact"></span></td>
                                 </tr>
                               </table>
-                            
                         </div>
                       </div>
 
                       <div class="listy-48th-IFRA-table-with-botanicals IFRA-table">
                         <h2 class="annexeI49 d-inline text-size-14px">
-                          <span>
-                            <b lang="fr">Annexe I <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
-                            <b lang="en">Annexe I <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
-                          </span>
+                          <span lang="fr"><b>Annexe I :</b> FR Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
+                          <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
                         </h2>
                         <br>
                         <table class="tableannexeI">
