--- a/html/_/index.html
+++ b/html/_/index.html
@@ -525,7 +525,6 @@ crossorigin=""/>
 
                       <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
                       <div class="blocktable mt-3">
-
                         <!--Titre des tableaux : "Dosage limite recommandé"-->
                         <h3 class="d-inline text-size-14px">
                           <span>
@@ -627,12 +626,13 @@ crossorigin=""/>
                               </table>
                         </div>
                       </div>
-
+                      
+                      <!-- LE TABLEAU CI-DESSOUS EST-IL UTILE ? -->
                       <div class="listy-48th-IFRA-table-with-botanicals IFRA-table">
-                        <h2 class="annexeI49 d-inline text-size-14px">
+                        <h3 class="annexeI49 d-inline text-size-14px">
                           <span lang="fr"><b>Annexe I :</b> FR Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
                           <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
-                        </h2>
+                        </h3>
                         <br>
                         <table class="tableannexeI">
                             <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
@@ -658,40 +658,35 @@ crossorigin=""/>
                     </div>
                     
                     <div class="blockannexeI48 mt-3 listy-48th-IFRA-table-without-botanicals IFRA-table">
-
-                      <p>
-                      <h2 class="annexeI49B d-inline text-size-14px">
-                        <span>
-                          <b lang="fr">Annexe I <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
-                          <b lang="en">Annexe I <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
-                        </span>
-                      </h2>
+                      <h3 class="annexeI49B d-inline text-size-14px">
+                        <span lang="fr"><b>Annexe I :</b> FR Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
+                        <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
+                      </h3>
                       <br>
-                        <table class="tableannexeI">
-                          <!-- EN-TETE DU TABLEAU-->
-                              <thead>
-                                <tr>
-                                  <th colspan="3">
-                                    <span lang="fr">Liste des composés réglementés contenus dans cet ingrédient</span>
-                                    <span lang="en">List of regulated compounds contained in this ingredient</span>
-                                  </th>
-                                </tr>
-                              </thead>
-                                <tr style="background-color: #FBE5D6FF; font-weight: bold;">
-                                  <td>
-                                    <span lang="fr">Nom de l'ingrédient réglementé</span>
-                                    <span lang="en">Regulated ingredient name</span>
-                                  </td>
-                                  <td>CAS N°</td>
-                                  <td>
-                                    <span lang="fr">Concentration estimée</span>
-                                    <span lang="en">Estimated Concentration</span>
-                                  </td>
-                                </tr>
-                              <tbody class="ingredients-containing-without-botanicals-48">
-                              </tbody>
-                        </table>
-                      </p>
+                      <table class="tableannexeI">
+                        <!-- EN-TETE DU TABLEAU-->
+                        <thead>
+                          <tr>
+                            <th colspan="3">
+                              <span lang="fr">Liste des composés réglementés contenus dans cet ingrédient</span>
+                              <span lang="en">List of regulated compounds contained in this ingredient</span>
+                            </th>
+                          </tr>
+                          </thead>
+                            <tr style="background-color: #FBE5D6FF; font-weight: bold;">
+                              <td>
+                                <span lang="fr">Nom de l'ingrédient réglementé</span>
+                                <span lang="en">Regulated ingredient name</span>
+                              </td>
+                              <td>CAS N°</td>
+                              <td>
+                                <span lang="fr">Concentration estimée</span>
+                                <span lang="en">Estimated Concentration</span>
+                              </td>
+                            </tr>
+                            <tbody class="ingredients-containing-without-botanicals-48">
+                            </tbody>
+                      </table>
                     </div><!--Fermeture blockannexeI48-->
 
                     <div class="responsabilité">
