--- a/html/_/index.html
+++ b/html/_/index.html
@@ -535,10 +535,6 @@ crossorigin=""/>
                         <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
                         <div class="table-responsive text-center m-0">
                               <table class="table1 main-48th-IFRA-table IFRA-table mb-3">
-                                <caption class="caption m-0">
-                                  <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span>
-                                  <span lang="en">Maximum usage according to the product category :</span>
-                                </caption> 
                                 <!-- EN-TETE DU TABLEAU-->
                                 <tr>
                                   <th>
@@ -603,11 +599,6 @@ crossorigin=""/>
                               </table>
                             
                               <table class="table2 skin-IFRA-table IFRA-table mb-3">
-                                <!-- TITRE DU TABLEAU-->
-                                <caption class="caption mb-0">
-                                  <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span>
-                                  <span lang="en">Maximum usage according to the product category :</span>
-                                </caption> 
                                 <!-- EN-TETE DU TABLEAU-->
                                 <tr>
                                   <th colspan="2"><span lang="fr">En contact avec la peau</span><span lang="en">Skin contact products </span></th>
@@ -635,7 +626,6 @@ crossorigin=""/>
                         </h3>
                         <br>
                         <table class="tableannexeI">
-                            <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                             <!-- EN-TETE DU TABLEAU-->
                                 <thead>
                                   <tr>
@@ -658,10 +648,10 @@ crossorigin=""/>
                     </div>
                     
                     <div class="blockannexeI48 mt-3 listy-48th-IFRA-table-without-botanicals IFRA-table">
-                      <h3 class="annexeI49B d-inline text-size-14px">
-                        <span lang="fr"><b>Annexe I :</b> FR Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
+                      <h2 class="annexeI49B d-inline text-size-14px IFRA-infos mb-3">
+                        <span lang="fr"><b>Annexe I :</b> Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
                         <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
-                      </h3>
+                      </h2>
                       <br>
                       <table class="tableannexeI">
                         <!-- EN-TETE DU TABLEAU-->
