--- a/html/_/index.html
+++ b/html/_/index.html
@@ -648,12 +648,13 @@ crossorigin=""/>
                     </div>
                     
                     <div class="blockannexeI48 mt-3 listy-48th-IFRA-table-without-botanicals IFRA-table">
-                      <h2 class="annexeI49B d-inline IFRA-infos textitem mb-3">
+                      <h2 class="annexeI49B d-inline IFRA-infos textitem" style="padding: -5px;">
                         <span lang="fr"><b class="item">Annexe I :</b> Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
                         <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
                       </h2>
                       <br>
-                      <table class="tableannexeI">
+                      <!--Table concentration des synth dans les nat-->
+                      <table class="tableannexeI mt-3">
                         <!-- EN-TETE DU TABLEAU-->
                         <thead>
                           <tr>
