--- a/html/_/index.html
+++ b/html/_/index.html
@@ -438,7 +438,7 @@ crossorigin=""/>
               <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
               <span id="modalbody-allergenes" class="textitem"></span>
           </h3>
-          <p class="lienarticlereglementation mt-3 mb-0">
+          <p class="responsabilité mt-3 mb-0">
             <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
             <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
           </p>
@@ -648,11 +648,10 @@ crossorigin=""/>
                     </div>
                     
                     <div class="blockannexeI48 mt-3 listy-48th-IFRA-table-without-botanicals IFRA-table">
-                      <h2 class="annexeI49B d-inline IFRA-infos textitem" style="padding: -5px;">
+                      <h3 class="annexeI49B d-inline IFRA-infos textitem2">
                         <span lang="fr"><b class="item">Annexe I :</b> Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
                         <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
-                      </h2>
-                      <br>
+                      </h3>
                       <!--Table concentration des synth dans les nat-->
                       <table class="tableannexeI mt-3">
                         <!-- EN-TETE DU TABLEAU-->
@@ -681,10 +680,10 @@ crossorigin=""/>
                     </div><!--Fermeture blockannexeI48-->
 
                     <div class="responsabilité">
-                        <!--paragraphe de responsabilité
-                        <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span></p> -->
-                        <!--Lien vers le site de l'IFRA-->
-                        <p class="logoifra text-size-11px" style="margin-bottom: 0;"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
+                        <!--Lien externe vers site IFRA-->
+                        <p class="logoifra text-size-11px">
+                          <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
+                          <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
                         <br>
                         <!--Lien interne sur l'IFRA-->
                         <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span>
