--- a/html/_/index.html
+++ b/html/_/index.html
@@ -653,7 +653,7 @@ crossorigin=""/>
                         <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
                       </h3>
                       <!--Table concentration des synth dans les nat-->
-                      <table class="tableannexeI mt-3">
+                      <table class="tableannexeI m-0">
                         <!-- EN-TETE DU TABLEAU-->
                         <thead>
                           <tr>
@@ -679,15 +679,16 @@ crossorigin=""/>
                       </table>
                     </div><!--Fermeture blockannexeI48-->
 
-                    <div class="responsabilité">
-                        <!--Lien externe vers site IFRA-->
+                    <div class="responsabilité mt-3">
                         <p class="logoifra text-size-11px">
+                          <!--Lien externe vers site IFRA-->
                           <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
                           <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
-                        <br>
-                        <!--Lien interne sur l'IFRA-->
-                        <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span>
-                        <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span></p>
+                          <br>
+                          <!--Lien interne sur l'IFRA-->
+                          <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span>
+                          <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span>
+                        </p>
                     </div>
 
                   </div><!--Ici on ferme col-12-->
