--- a/html/_/index.html
+++ b/html/_/index.html
@@ -438,7 +438,7 @@ crossorigin=""/>
               <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
               <span id="modalbody-allergenes" class="textitem"></span>
           </h3>
-          <p class="logoifra mt-3 mb-0">
+          <p class="lienarticlereglementation mt-3 mb-0">
             <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
             <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
           </p>
@@ -482,7 +482,7 @@ crossorigin=""/>
             <!--Ouverture du 48th amendement-->
             <div class="tab-pane fade" id="tab48info" role="tabpanel" aria-labelledby="pills-tab48">    
               <div class="container-fluid">
-                <div class="row">
+                <div class="row" style="background-color: blue;">
                   <div class="col-12">
 
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires, Tables, Annexe I-->
