--- a/html/_/index.html
+++ b/html/_/index.html
@@ -482,7 +482,7 @@ crossorigin=""/>
             <!--Ouverture du 48th amendement-->
             <div class="tab-pane fade" id="tab48info" role="tabpanel" aria-labelledby="pills-tab48">    
               <div class="container-fluid">
-                <div class="row" style="background-color: blue;">
+                <div class="row">
                   <div class="col-12">
 
                     <!-- Block définissant Type d'amendement, Numéro d'amendement, Commentaires, Tables, Annexe I-->
@@ -679,18 +679,6 @@ crossorigin=""/>
                       </table>
                     </div><!--Fermeture blockannexeI48-->
 
-                    <div class="responsabilité mt-3">
-                        <p class="logoifra text-size-11px">
-                          <!--Lien externe vers site IFRA-->
-                          <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
-                          <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
-                          <br>
-                          <!--Lien interne sur l'IFRA-->
-                          <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span>
-                          <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span>
-                        </p>
-                    </div>
-
                   </div><!--Ici on ferme col-12-->
                 </div><!--Ici on ferme row-->
               </div><!--Ici on ferme container fluid-->
@@ -863,28 +851,22 @@ crossorigin=""/>
                       </p>
                     </div><!--Fermeture blockannexeI49-->
 
-                    <div class="responsabilité">
-                      <!--paragraphe de responsabilité
-                        <p class="logoifra text-size-11px text-center text-my-grey">
-                          <span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span>
-                          <span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span>
-                        </p> -->
-                        <!--Lien vers le site de l'IFRA-->
-                        <p class="logoifra text-size-11px" style="margin-bottom: 0;">
-                          <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
-                          <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
-                          <br>
-                          <!--Lien interne sur l'IFRA-->
-                          <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span>
-                          <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span>
-                        </p>
-                    </div><!--Ici on faire le paragraphe de responsabilité-->
-
                   </div><!--Ici on ferme col-12-->
                 </div><!--Ici on ferme row-->
               </div><!--Ici on ferme container fluid-->        
             </div><!--Fermeture du 49th amendement-->
           </div><!--Fermeture du tab-content-->
+          <div class="lienarticlereglementation mt-3">
+            <p class="logoifra text-size-11px">
+              <!--Lien externe vers site IFRA-->
+              <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
+              <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
+              <br>
+              <!--Lien interne sur l'IFRA-->
+              <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span>
+              <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span>
+            </p>
+          </div>
         </div>
         <!--Block Pictogrammes-->
     <!--<div class="blockpicto">
