--- a/html/_/index.html
+++ b/html/_/index.html
@@ -685,7 +685,7 @@ crossorigin=""/>
             </div><!--Fermeture du 48th amendement-->
 
             <!--Ouverture du 49th amendement-->
-            <div class="tab-pane fade  show active" id="tab49info"   role="tabpanel" aria-labelledby="pills-tab49">
+            <div class="tab-pane fade show active" id="tab49info" role="tabpanel" aria-labelledby="pills-tab49">
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-12">
@@ -729,9 +729,15 @@ crossorigin=""/>
                       
                     
                       <div class="blocktable49">
-                        <div class="table-responsive text-center mb-2">
+                        <!--Titre des tableaux : "Dosage limite recommandé"-->
+                        <h3 class="d-inline text-size-14px">
+                          <span>
+                            <b lang="fr">Dosage limite recommandé <sup class="fas fa-question-circle iconetab" title="L'IFRA recommande dans ses standards un dosage maximum pour chaque produit réglementé et pour chaque catégorie de produit fini. Il faut ainsi voir ces pourcentages comme la plus haute concentration recommandée en ingrédient réglementé dans le produit fini."></sup> :</b>
+                            <b lang="en">Quantitative limit on the use <sup class="fas fa-question-circle iconetab" title="IFRA recommends in its standards a maximum dosage for each regulated product and for each category of finished product. These percentages should therefore be seen as the highest recommended concentration of the regulated ingredient in the finished product."></sup> :</b>
+                          </span>  
+                        </h3>
+                        <div class="table-responsive text-center m-0">
                               <table class="table149 main-49th-IFRA-table IFRA-table">
-                                <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
                                 <!-- EN-TETE DU TABLEAU-->
                                 <tr>
                                   <th>Cat.1</th>
@@ -791,7 +797,6 @@ crossorigin=""/>
                         </h3>
                         <br>
                         <table class="tableannexeI49th">
-                          <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                           <!-- EN-TETE DU TABLEAU-->
                               <thead>
                                 <tr>
